# qemu

./: README.md
hw/: meson.build
hw/fpga/: .gitignore  meson.build
hw/fpga/simple_module/: Makefile  README.md  Server.cpp  Server.h  client  client.c  meson.build  server  simple_module.v  tb_simple.cpp  tb_simple_module.cpp
hw/misc/: banana_rom.c
hw/riscv/: virt.c
